--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+# dependecies installed by npm
 node_modules
-/dist
+package-lock.json
 yarn.lock
+
+# build artefacts
+dist
+
+# macOS related files
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Local Netlify folder
+.netlify
+
+# Eleventy Assets
+.cache
+
+# Environment variables
+.env
